link in anchor updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 
                 <div class="LLC-Corporation-div">
 
-                    <a href="/secondpg.html" class="anchor-tag">
+                    <a href="/Techstuff-assign1.1/secondpg.html" class="anchor-tag">
                             <div class="LLC-parent-div">
                                     <div class="LLC-div">
                                             <img class="img-LLC"src="LLC_logo.svg"/>
